fails with exception on trying to print