@@ -72,30 +72,6 @@
 			<version>4.0-beta1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.pdfbox</groupId>
-			<artifactId>pdfbox</artifactId>
-			<version>3.0.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.pdfbox</groupId>
-			<artifactId>fontbox</artifactId>
-			<version>3.0.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.librepdf</groupId>
-			<artifactId>openpdf</artifactId>
-			<version>2.0.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.panteleyev</groupId>
-			<artifactId>jpackage-maven-plugin</artifactId>
-			<version>1.6.6</version>
-		</dependency>
-
 	</dependencies>
 
 	<repositories>
@@ -191,6 +167,7 @@
 				</executions>
 			</plugin>
 
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -228,98 +205,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.4.1</version>
-				<configuration>
-					<outputDirectory>target/jmods</outputDirectory>
-				</configuration>
-			</plugin>
-
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<includeScope>runtime</includeScope>
-							<outputDirectory>target/jmods</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<!--has problem with automatic modules -->
-				<!-- run with command clean package jpackage:jpackage@win-->
-				<groupId>org.panteleyev</groupId>
-				<artifactId>jpackage-maven-plugin</artifactId>
-				<version>1.6.4</version>
-
-				<configuration>
-					<name>Fertilizer App</name>
-					<appVersion>${version}</appVersion>
-					<vendor>${vendor}</vendor>
-					<module>${module.name}/fertilizer.MainApp</module>
-					<modulePaths>
-						<modulePath>target/classes</modulePath>
-						<modulePath>target/jmods</modulePath>
-					</modulePaths>
-
-					<destination>target/dist</destination>
-					<javaOptions>
-						<option>--enable-preview</option>
-						<option>-Dfile.encoding=UTF-8</option>
-					</javaOptions>
-				</configuration>
-
-				<executions>
-
-					<execution>
-						<id>win</id>
-						<configuration>
-							<icon>icons/icon.ico</icon>
-							<winMenu>true</winMenu>
-						</configuration>
-					</execution>
-
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.6.0</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-						<minimizeJar>true</minimizeJar>
-							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<manifestEntries>
-										<Main-Class>${app.main.class}</Main-Class>
-										<X-Compile-Source-JDK>
-											${maven.compile.source}</X-Compile-Source-JDK>
-										<X-Compile-Target-JDK>
-											${maven.compile.target}</X-Compile-Target-JDK>
-									</manifestEntries>
-								</transformer>
-							</transformers>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
 		</plugins>
 	</build>
 
